...
        android:text="@string/web_shortcuts"
        android:textColor="@color/text_primary"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/shortcut_empty"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/no_web_shortcuts"
        android:textColor="@color/text_secondary"
        android:textSize="20sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/shortcut_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1" />

    <LinearLayout
...
            android:paddingHorizontal="24dp"
            android:text="@string/add_shortcut"
            android:textAllCaps="false"
            android:textColor="@color/text_primary" />

        <Button
            android:id="@+id/back_to_settings"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginStart="18dp"
            android:background="@drawable/tile_selector"
            android:paddingHorizontal="24dp"
            android:text="@string/back"
...
