<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/manage_app_row"
    android:layout_width="match_parent"
    android:layout_height="84dp"
    android:layout_marginVertical="5dp"
    android:background="@drawable/tile_selector"
    android:clickable="true"
    android:focusable="true"
...
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/text_primary"
        android:textSize="19sp" />

    <CheckBox
        android:id="@+id/manage_app_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:focusable="false" />
</LinearLayout>

